Fix 1 code smell
RISDEV-4398